[package]
name = "pallet-usernames-rpc"
version = "1.0.0"
edition = "2021"
authors = ["Alex Bean <https://github.com/AlexD10S>"]
description = 'RPC methods for the template pallet'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = [
	"derive",
] }

jsonrpsee = { workspace = true, features = [
  "client-core",
  "macros",
  "server-core",
] }

# Substrate packages
sp-api.workspace = true
sp-blockchain.workspace = true
sp-runtime.workspace = true

# local packages
pallet-usernames-runtime-api = { path = "./runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "sp-api/std",
  "sp-runtime/std",
  "pallet-usernames-runtime-api/std",
  "codec/std"
]
