[package]
name = "pallet-usernames-runtime-api"
authors = ["Alex Bean <https://github.com/AlexD10S>"]
version = "1.0.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api.workspace = true
codec.workspace = true

[features]
default = ["std"]
std = [
    "sp-api/std",
    "codec/std"
]